# Mandelbulb

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
cpp/: plot_data.py
cpp/srs/: main.cpp
python/: main.py
src/mandelbulb/: config.py  lighting.py  mandelbulb.py  rendering.py  utils.py
