[project]
name = "mandelbulb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neco kriel", email = "necokriel@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.10.1",
  "numpy>=2.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
